Revise conclusion section of p2.md
Head to p3 instead of "stay tuned"

--- a/p2/p2.md
+++ b/p2/p2.md
@@ -1376,15 +1376,9 @@ As a recap, here's how it all connects:
 
 The other half is, well, solving it.
 
-After two long chapters, finally, we can understand the top proposed solutions to *every* sub-part of the Alignment Problem! Stay tuned for the grand finale, Part 3, of AI Safety for Fleshy Humans, coming **end of November 2025!**
+After two long chapters, finally, we can understand the top proposed solutions to *every* sub-part of the Alignment Problem!
 
-Sign up to be notified when the final part is out: 👇
-
-{% include 'templates/signup.html' %}
-
-In the meantime, check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span class='NEXT_ARROW'><img src="../media/misc/NEXT_ARROW.png"></span>
-
-
+{% include 'templates/next_page_button.html' %}
 
 
 
