--- a/p2/p2.md
+++ b/p2/p2.md
@@ -1376,7 +1376,7 @@ As a recap, here's how it all connects:
 
 The other half is, well, solving it.
 
-After two long chapters, finally, we can understand the top proposed solutions to *every* sub-part of the Alignment Problem!
+And how do we do _that?_ I'm glad you asked. Let's finally, _finally_, look at the many proposed solutions to AI Safety: ⤵
 
 {% include 'templates/next_page_button.html' %}
 
