--- a/p3/p3.md
+++ b/p3/p3.md
@@ -1613,7 +1613,7 @@ The above paper was meant for Humans, but could be implemented in AIs, too.
 
 🍺 **Use AIs to distill & amplify human values:**
 
-Researchers at Google DeepMind have found that a fine-tuned LLM can find [create consensus among humans with diverse values](https://arxiv.org/pdf/2211.15006). Better yet, these AI-aided consensus ideas were preferred _over the humans' opinions themselves_. (though, note: the humans weren't necessarily writing for consensus.)
+Researchers at Google DeepMind have found that a fine-tuned LLM can [create consensus among humans with diverse values](https://arxiv.org/pdf/2211.15006). Better yet, these AI-aided consensus ideas were preferred _over the humans' opinions themselves_. (though, note: the humans weren't necessarily writing for consensus.)
 
 Don't want to rely on fragile LLM technology specifically? Here's a proposal to do ["AI as the engine, humans as the steering wheel"](https://vitalik.eth.limo/general/2025/02/28/aihumans.html) _in general_, for any AI tech:
 
@@ -1840,7 +1840,7 @@ But in the past, hasn't automation always been good on average, creating more jo
 
 A popular proposal is a **Universal Basic Income (UBI)**, funded by taxing AI. After all, modern AI was trained on data created by the public's hard work — shouldn't part of the gains go back to the public, a "citizen's dividend, similar to [Alaska's sovereign wealth fund](https://en.wikipedia.org/wiki/Alaska_Permanent_Fund), where profit from their natural resources goes back to their citizens?
 
-A lot of skepticism about UBI comes from it promoted by tech CEOs [like Sam Altman](https://moores.samaltman.com/), who are, uh, ["not completely candid"](https://garymarcus.substack.com/p/sam-altmans-pants-are-totally-on). That said, just because someone's promoting an idea cynically to quell dissent, doesn't mean it's _not_ a good idea. Tech CEOs could be lying about promising UBI, because UBI _would_ be great. [To quote GLaDOS](https://p1.portal2sounds.com/57): "Killing you, and giving you good advice, aren't mutually exclusive."
+A lot of skepticism about UBI comes from it being promoted by tech CEOs [like Sam Altman](https://moores.samaltman.com/), who are, uh, ["not completely candid"](https://garymarcus.substack.com/p/sam-altmans-pants-are-totally-on). That said, just because someone's promoting an idea cynically to quell dissent, doesn't mean it's _not_ a good idea. Tech CEOs could be lying about promising UBI, because UBI _would_ be great. [To quote GLaDOS](https://p1.portal2sounds.com/57): "Killing you, and giving you good advice, aren't mutually exclusive."
 
 Another common critique of UBI is that people don't just need money, they need _meaning_, and people get meaning from their jobs. (["Love and Work"](https://figuringoutfulfillment.wordpress.com/2012/01/23/lieben-und-arbeiten/), Freud supposedly said.) Now: writing as someone who finds meaning in her job: _f\@\#k off_. I keep hearing the "work is good coz it gives meaning" line from think tanks & pundits & the Credentialed Class, and, yeah, easy for _you_ to say, you have a _nice_ job. _I_ have a nice job. We're not working the graveyard shift at 7/11, or slowly getting lung cancer from the industrial fumes. _But, oh, if we're all living off UBI, how will we get meaning if we can't sell our labour on a market?_ Oh I dunno, how about spending life with family? friends? lovers? while getting your sense of mastery & challenge from sports, art, math, play? And if you love your job making art or writing essays, you know you can just _keep doing that_ even with UBI, right?
 
